# cpp-libraries-training

1basis/: CMakeLists.txt
1basis/src/: game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
SFML/: Readme.md
SFML/1basis/: CMakeLists.txt
SFML/1basis/src/: game.hpp  player.cpp
wxWidgets/1basis/: CMakeLists.txt  build.bat
wxWidgets/1basis/code/1 menus and toolbars/: frame.cpp  main.cpp  panel.hpp
wxWidgets/1basis/code/2 sizers/: frame.cpp  frame.hpp  main.cpp
wxWidgets/1basis/code/3 dialogs/: frame.cpp  frame.hpp  main.cpp
wxWidgets/1basis/code/4 widgets 1/: frame.cpp  frame.hpp
wxWidgets/1basis/code/5 widgets 2/: frame.cpp  frame.hpp
wxWidgets/1basis/code/6 d&d/: frame.cpp  frame.hpp
wxWidgets/1basis/code/7 contexts/: frame.cpp  frame.hpp
wxWidgets/1basis/code/8 custom widget/: frame.cpp  frame.hpp  main.hpp
wxWidgets/1basis/src/: frame.cpp  frame.hpp  main.cpp  main.hpp  panel.cpp
wxWidgets/wxWidgets/lib/gcc1120_x64_dll/mswu/: build.cfg
wxWidgets/wxWidgets/lib/gcc1120_x64_dll/mswud/: build.cfg
